eks-setup/eks-cluster.tf
#
# EKS Cluster Resources
#  * IAM Role to allow EKS service to manage other AWS services
#  * EC2 Security Group to allow networking traffic with EKS cluster
#  * EKS Cluster
#

resource "aws_iam_role" "pb-terraform-eks-cluster" {
  name = "pb-terraform-eks-cluster"

  tags = {
    Name = "pb-terraform-eks-cluster"
  }
  assume_role_policy = <<POLICY
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Effect": "Allow",
      "Principal": {
        "Service": "eks.amazonaws.com"
      },
      "Action": "sts:AssumeRole"
    }
  ]
}
POLICY
}

resource "aws_iam_role_policy_attachment" "pb-terraform-eks-cluster-AmazonEKSClusterPolicy" {
  tags = {
    Name = "pb-terraform-eks-cluster-policy"
  }
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSClusterPolicy"
  role       = "${aws_iam_role.pb-terraform-eks-cluster.name}"
}

resource "aws_iam_role_policy_attachment" "pb-terraform-eks-cluster-AmazonEKSServicePolicy" {
  tags = {
    Name = "pb-terraform-eks-cluster-service-policy"
  }
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSServicePolicy"
  role       = "${aws_iam_role.pb-terraform-eks-cluster.name}"
}

resource "aws_security_group" "pb-terraform-eks-cluster-sg" {
  name        = "pb-terraform-eks-cluster"
  description = "Cluster communication with worker nodes"
  vpc_id      = "${aws_vpc.eks-vpc.id}"

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "pb-terraform-eks-cluster-sg"
  }
}

resource "aws_security_group_rule" "pb-terraform-eks-cluster-ingress-node-https" {
  description              = "Allow pods to communicate with the cluster API Server"
  from_port                = 443
  protocol                 = "tcp"
  security_group_id        = "${aws_security_group.pb-terraform-eks-cluster-sg.id}"
  source_security_group_id = "${aws_security_group.pb-terraform-eks-node-sg.id}"
  to_port                  = 443
  type                     = "ingress"
  tags = {
    Name = "pb-terraform-eks-cluster-ingress-node-https"
  }
}

resource "aws_security_group_rule" "pb-terraform-eks-cluster-ingress-workstation-https" {
  cidr_blocks       = ["${local.workstation-external-cidr}"]
  #cidr_blocks       = ["0.0.0.0/0"]
  description       = "Allow workstation to communicate with the cluster API Server"
  from_port         = 443
  protocol          = "tcp"
  security_group_id = "${aws_security_group.pb-terraform-eks-cluster-sg.id}"
  to_port           = 443
  type              = "ingress"
  tags = {
    Name = "pb-terraform-eks-cluster-ingress-workstation-https"
  }
}

resource "aws_eks_cluster" "pb-terraform-eks-cluster" {
  name     = "${var.cluster-name}"
  role_arn = "${aws_iam_role.pb-terraform-eks-cluster.arn}"

  vpc_config {
    security_group_ids = ["${aws_security_group.pb-terraform-eks-cluster-sg.id}"]
    subnet_ids         = "${aws_subnet.eks-vpc-subnet[*].id}"
  }
  tags = {
    Name = "pb-terraform-eks-cluster"
  }

  depends_on = [
    "aws_iam_role_policy_attachment.pb-terraform-eks-cluster-AmazonEKSClusterPolicy",
    "aws_iam_role_policy_attachment.pb-terraform-eks-cluster-AmazonEKSServicePolicy",
  ]
}
